--- a/package.json
+++ b/package.json
@@ -3,5 +3,10 @@
   "version": "1.0.0-alpha",
   "description": "Praline",
   "author": "Nevena Gaj <nevenagajevic@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "container": "export NAME=praline WORKDIR=/$NAME; if docker ps -a | grep -q $NAME; then npm run container:start; else npm run container:run; fi",
+    "container:start": "docker start -ai praline",
+    "container:run": "docker run --name=$NAME -w /$NAME -p 8080:8080 -v $(pwd):/$NAME -v $(pwd)/package.json:/package.json -v /root/.npm -v /node_modules -e \"NODE_PATH=/node_modules\" -e \"PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/node_modules/.bin\" --entrypoint=/bin/bash -it node:6"
+  }
 }
