--- a/package.json
+++ b/package.json
@@ -8,5 +8,33 @@
     "container": "export NAME=praline WORKDIR=/$NAME; if docker ps -a | grep -q $NAME; then npm run container:start; else npm run container:run; fi",
     "container:start": "docker start -ai praline",
     "container:run": "docker run --name=$NAME -w /$NAME -p 8080:8080 -v $(pwd):/$NAME -v $(pwd)/package.json:/package.json -v /root/.npm -v /node_modules -e \"NODE_PATH=/node_modules\" -e \"PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/node_modules/.bin\" --entrypoint=/bin/bash -it node:6"
+  },
+  "dependencies": {
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^6.3.7",
+    "babel-core": "^6.11.4",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "eslint": "^3.1.1",
+    "eslint-loader": "^1.4.1",
+    "favicons-webpack-plugin": "0.0.6",
+    "html-webpack-plugin": "^2.22.0",
+    "node-sass": "^3.8.0",
+    "normalize.css": "^4.2.0",
+    "offline-plugin": "^3.4.2",
+    "postcss-loader": "^0.9.1",
+    "react-transform-hmr": "^1.0.4",
+    "sass-loader": "^4.0.0",
+    "source-map-support": "^0.4.2",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   }
 }
