--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "normalize.css": "^4.2.0",
     "offline-plugin": "^3.4.2",
     "postcss-loader": "^0.9.1",
+    "react-hot-loader": "^1.3.0",
     "react-transform-hmr": "^1.0.4",
     "sass-loader": "^4.0.0",
     "source-map-support": "^0.4.2",
