--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-loader": "^1.4.1",
     "favicons-webpack-plugin": "0.0.6",
     "html-webpack-plugin": "^2.22.0",
+    "image-webpack-loader": "^2.0.0",
     "node-sass": "^3.8.0",
     "normalize.css": "^4.2.0",
     "offline-plugin": "^3.4.2",
