--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^3.1.1",
     "eslint-loader": "^1.4.1",
     "favicons-webpack-plugin": "0.0.6",
+    "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "image-webpack-loader": "^2.0.0",
     "node-sass": "^3.8.0",
