--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,5 @@
 {
-  "presets": ["es2015-webpack", "stage-0", "react"]
+  "presets": ["es2015-webpack", "stage-0", "react"],
+  "plugins": ["react-hot-loader/babel"]
+
 }
