--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "react-hot-loader": "^3.0.0-beta.2",
     "sass-loader": "^4.0.0",
     "source-map-support": "^0.4.2",
+    "standard": "^8.0.0-beta.3",
+    "standard-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^2.1.0-beta.20",
     "webpack-dev-server": "^2.1.0-beta.0"
