--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "standard": "^8.0.0-beta.3",
     "standard-loader": "^4.0.0",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^2.1.0-beta.20",
     "webpack-dev-server": "^2.1.0-beta.0"
   }
