--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "standard-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
+    "webfontloader": "^1.6.26",
     "webpack": "^2.1.0-beta.20",
     "webpack-dev-server": "^2.1.0-beta.0"
   }
