--- a/package.json
+++ b/package.json
@@ -31,12 +31,11 @@
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "image-webpack-loader": "^2.0.0",
-    "node-sass": "^3.8.0",
     "normalize.css": "^4.2.0",
     "offline-plugin": "^3.4.2",
+    "postcss-cssnext": "^2.7.0",
     "postcss-loader": "^0.9.1",
     "react-hot-loader": "^3.0.0-beta.2",
-    "sass-loader": "^4.0.0",
     "source-map-support": "^0.4.2",
     "standard": "^8.0.0-beta.3",
     "standard-loader": "^4.0.0",
