--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "praline",
   "version": "1.0.0-alpha",
   "description": "Praline",
-  "author": "Nevena Gaj <nevenagajevic@gmail.com>",
+  "author": "Nevena Gajević <nevenagajevic@gmail.com>",
   "license": "MIT",
   "main": "src/index.js",
   "scripts": {
