--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "standard": "^8.0.0-beta.3",
     "standard-loader": "^4.0.0",
     "style-loader": "^0.13.1",
+    "stylelint": "^7.0.3",
+    "stylelint-config-standard": "^11.0.0",
     "url-loader": "^0.5.7",
     "webfontloader": "^1.6.26",
     "webpack": "^2.1.0-beta.20",
