--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "postcss-cssnext": "^2.7.0",
     "postcss-import": "8.0.2",
     "postcss-loader": "^0.9.1",
+    "postcss-reporter": "^1.4.1",
     "react-hot-loader": "^3.0.0-beta.2",
     "source-map-support": "^0.4.2",
     "standard": "^8.0.0-beta.3",
