--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "css-loader": "^0.23.1",
     "eslint": "^3.1.1",
     "eslint-loader": "^1.4.1",
+    "exports-loader": "^0.6.3",
     "favicons-webpack-plugin": "0.0.6",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "image-webpack-loader": "^2.0.0",
     "normalize.css": "^4.2.0",
+    "nunjucks": "^2.4.2",
+    "nunjucks-loader": "^2.4.3",
     "offline-plugin": "^3.4.2",
     "postcss-cssnext": "^2.7.0",
     "postcss-import": "8.0.2",
