Configure port in run script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "PATH=$PATH:$(pwd)/node_modules/.bin webpack --config webpack",
     "start": "PATH=$PATH:$(pwd)/node_modules/.bin webpack-dev-server -d --config webpack --output-path=$(pwd)/dist --https --watch --watch-poll --host 0.0.0.0",
-    "production": "PATH=$PATH:$(pwd)/node_modules/.bin webpack-dev-server -d --config webpack --output-path=$(pwd)/dist",
+    "production": "PATH=$PATH:$(pwd)/node_modules/.bin webpack-dev-server -d --config webpack --output-path=$(pwd)/dist --port $PORT",
     "container": "export NAME=praline WORKDIR=/$NAME; if docker ps -a | grep -q $NAME; then npm run container:start; else npm run container:run; fi",
     "container:start": "docker start -ai praline",
     "container:run": "docker run --name=$NAME -w /$NAME -p 8080:8080 -v $(pwd):/$NAME -v $(pwd)/package.json:/package.json -v /root/.npm -v /node_modules -e \"NODE_PATH=/node_modules\" -e \"PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/node_modules/.bin\" --dns 8.8.8.8 --dns 8.8.4.4 --entrypoint=/bin/bash -it node:6",
