--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node": "6.x"
   },
   "dependencies": {
+    "node-static": "^0.7.8",
     "react": "^15.2.1",
     "react-dom": "^15.2.1"
   },
