--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "license": "MIT",
   "main": "src/index.js",
   "scripts": {
-    "build": "PATH=$PATH:$(pwd)/node_modules/.bin webpack --config webpack",
     "start": "PATH=$PATH:$(pwd)/node_modules/.bin webpack-dev-server -d --config webpack --output-path=$(pwd)/dist --https --watch --watch-poll --host 0.0.0.0",
-    "production": "PATH=$PATH:$(pwd)/node_modules/.bin webpack-dev-server -d --config webpack --output-path=$(pwd)/dist --port $PORT",
+    "server": "node bin/server",
+    "postinstall": "PATH=$PATH:$(pwd)/node_modules/.bin webpack --config webpack/production",
     "container": "export NAME=praline WORKDIR=/$NAME; if docker ps -a | grep -q $NAME; then npm run container:start; else npm run container:run; fi",
     "container:start": "docker start -ai praline",
     "container:run": "docker run --name=$NAME -w /$NAME -p 8080:8080 -v $(pwd):/$NAME -v $(pwd)/package.json:/package.json -v /root/.npm -v /node_modules -e \"NODE_PATH=/node_modules\" -e \"PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/node_modules/.bin\" --dns 8.8.8.8 --dns 8.8.4.4 --entrypoint=/bin/bash -it node:6",
@@ -40,6 +40,7 @@
     "image-webpack-loader": "^2.0.0",
     "normalize.css": "^4.2.0",
     "nunjucks": "^2.4.2",
+    "nunjucks-html-loader": "^1.0.0",
     "nunjucks-loader": "^2.4.3",
     "offline-plugin": "^3.4.2",
     "postcss-cssnext": "^2.7.0",
